revise comments and paths

--- a/preprocess_native_images.ipynb
+++ b/preprocess_native_images.ipynb
@@ -4,53 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              total        used        free      shared  buff/cache   available\n",
-      "Mem:          1.0Ti        47Gi        93Gi       129Mi       866Gi       955Gi\n",
-      "Swap:            0B          0B          0B\n",
-      "Wed Jun 28 02:05:32 2023       \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 515.105.01   Driver Version: 515.105.01   CUDA Version: 11.7     |\n",
-      "|-------------------------------+----------------------+----------------------+\n",
-      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
-      "|                               |                      |               MIG M. |\n",
-      "|===============================+======================+======================|\n",
-      "|   0  NVIDIA A100-SXM...  On   | 00000000:47:00.0 Off |                    0 |\n",
-      "| N/A   32C    P0    57W / 400W |      0MiB / 40960MiB |      0%      Default |\n",
-      "|                               |                      |             Disabled |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "|   1  NVIDIA A100-SXM...  On   | 00000000:4E:00.0 Off |                    0 |\n",
-      "| N/A   30C    P0    52W / 400W |      0MiB / 40960MiB |      0%      Default |\n",
-      "|                               |                      |             Disabled |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "|   2  NVIDIA A100-SXM...  On   | 00000000:87:00.0 Off |                    0 |\n",
-      "| N/A   45C    P0    60W / 400W |      0MiB / 40960MiB |      0%      Default |\n",
-      "|                               |                      |             Disabled |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "|   3  NVIDIA A100-SXM...  On   | 00000000:90:00.0 Off |                    0 |\n",
-      "| N/A   40C    P0    57W / 400W |      0MiB / 40960MiB |      0%      Default |\n",
-      "|                               |                      |             Disabled |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "                                                                               \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| Processes:                                                                  |\n",
-      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
-      "|        ID   ID                                                   Usage      |\n",
-      "|=============================================================================|\n",
-      "|  No running processes found                                                 |\n",
-      "+-----------------------------------------------------------------------------+\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# import cv2\n",
-    "!free -h\n",
-    "!nvidia-smi"
+    "# import cv2"
    ]
   },
   {
@@ -386,12 +342,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Paths (Change accordingly)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = '/home/carlos.jimenez/ai-in-health/Stroke-Brain-Lesions'\n",
+    "base_path = 'path/to/Stroke-Brain-Lesions'\n",
     "datasets_path = f'{base_path}/datasets/paper lesions extended'\n",
     "models_path = f'{base_path}/modelos/paper lesions extended'\n",
     "mni_T1_path = TEMPLATE_PATH = f'{base_path}/datasets/templates/mni_icbm152_t1_tal_nlin_sym_09a.nii'\n",
@@ -542,55 +505,7 @@
     "ypaths = [x for x in all_paths if 'LesionSmooth.nii.gz' in x]\n",
     "IDS = list([path.split('/')[-2] for path in xpaths])\n",
     "# len(IDS)\n",
-    "len(xpaths), len(ypaths)\n",
-    "\n",
-    "# xpaths[:100]\n",
-    "# set(xpaths) - set(ypaths)\n",
-    "# xpaths[:10], ypaths[:10]\n",
-    "# masked = sorted(glob(f'{datasets_path}/native_processed_masked/*'))\n",
-    "# masked_ids = [id_from_path(p)[:-24] for p in masked]\n",
-    "# len(masked_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# missing = [p for p in filtered_ids if p not in masked_ids]\n",
-    "# missing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 520,
-     "status": "ok",
-     "timestamp": 1684787068795,
-     "user": {
-      "displayName": "Roberto Alejandro Mena Ramirez",
-      "userId": "17762559014980159599"
-     },
-     "user_tz": 300
-    },
-    "id": "p1Oj_IPzGok7",
-    "outputId": "f86c60d9-9e74-47d5-b108-f964cabf6883"
-   },
-   "outputs": [],
-   "source": [
-    "# for i, f in enumerate(folders_filtered):\n",
-    "#   xpath = f+'/'+id_from_path(f)+'.nii.gz'\n",
-    "#   ypath = f+'/'+id_from_path(f)+'_LesionSmooth.nii.gz'\n",
-    "#   print(xpath)\n",
-    "#   print(ypath)\n",
-    "#   if i == 3 : break\n",
-    "# folders_filtered"
+    "len(xpaths), len(ypaths)"
    ]
   },
   {
@@ -740,16 +655,6 @@
     "print(load_img_ants(TEMPLATE_PATH).numpy().shape)\n",
     "print(sitk.GetArrayFromImage(load_img_sitk(TEMPLATE_PATH)).shape)\n",
     "# masked = load_img_sitk('/home/carlos.jimenez/ai-in-health/Stroke-Brain-Lesions/datasets/paper lesions extended/native_processed_masked/c0001s0004t01_processed_masked.nii.gz')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# np_masked = sitk.GetArrayFromImage(masked)\n",
-    "# explore_3D_array(np_masked)\n"
    ]
   },
   {
@@ -915,87 +820,6 @@
    },
    "source": [
     "## !! Register + BF + preprocess + predict +  mask + save"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ants.from_numpy(X[:130].reshape())\n",
-    "# X[:130].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 384,
-     "status": "ok",
-     "timestamp": 1684783263360,
-     "user": {
-      "displayName": "Roberto Alejandro Mena Ramirez",
-      "userId": "17762559014980159599"
-     },
-     "user_tz": 300
-    },
-    "id": "cjtPjq0UQ948",
-    "outputId": "3093f616-5ef5-4d13-989e-780a157e5cc0"
-   },
-   "outputs": [],
-   "source": [
-    "# import random\n",
-    "# from pprint import pprint\n",
-    "# random.seed(127)\n",
-    "# sample = random.sample(folders_filtered,5)\n",
-    "# pprint(sample)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load\n",
-    "# !free -h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['c0001s0004t01_registered.nii.gz',\n",
-       " 'c0001s0005t01_registered.nii.gz',\n",
-       " 'c0001s0006t01_registered.nii.gz',\n",
-       " 'c0001s0007t01_registered.nii.gz']"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.listdir(f'{base_path}/datasets/native_registered')[:4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# os.listdir(path_to_save)[:4]"
    ]
   },
   {
@@ -1379,7 +1203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
